Updated task descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: LabelStudio-MIR Docs
+description: LabelStudio interfaces for music information retrieval tasks!
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
